fix image not visible

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: url(/public/Background.png);
+  background-image: url(Background.png);
   background-size: cover;
 }
 
